--- a/SupperSync/plugin.yml
+++ b/SupperSync/plugin.yml
@@ -1,7 +1,7 @@
 name: SupperSync
-version: "1.2.2"
+version: "2.2.0"
 api: 1.10.0
 author: chs
-description: Update your server player data to WordPress!
-main: WebLogin\Main
+description: Sync your server player data with WordPress!
+main: SupperSync\Main
 commands:
